# name: test_attach_user_transform[uvloop-False]
  <class 'dict'> {
    '_id': 'bar',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_attach_user_transform[uvloop-True]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'bar',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
    },
    <class 'dict'> {
      '_id': 'foo',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      },
    },
    <class 'dict'> {
      '_id': 'baz',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
    },
  ]
---
# name: test_update_keys[uvloop-False-False-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_keys[uvloop-False-False-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_keys[uvloop-False-True-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_keys[uvloop-False-True-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_keys[uvloop-True-False-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_keys[uvloop-True-False-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_keys[uvloop-True-True-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_keys[uvloop-True-True-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
